--- a/www/partials/header.html
+++ b/www/partials/header.html
@@ -1,38 +1,4 @@
 <header>
-  <div class="header-marquee">
-    <div class="marquee-track">
-      <div class="marquee-content">
-        <span class="prize">Nintendo Switch</span>
-        <span class="win">Win</span>
-        <span class="prize">Pro Account</span>
-        <img class="shape-1" src="/images/marquee-shape-1.svg" />
-        <span class="win">Collect them all</span>
-        <span class="prize">Nintendo Switch</span>
-        <span class="win">Win</span>
-        <img class="shape-2" src="/images/marquee-shape-2.svg" />
-        <span class="prize">Pro Account</span>
-        <img class="shape-2" src="/images/marquee-shape-2.svg" />
-        <span class="win">Win</span>
-        <span class="win">Collect them all</span>
-      </div>
-
-      <div class="marquee-content">
-        <span class="prize">Nintendo Switch</span>
-        <span class="win">Win</span>
-        <span class="prize">Pro Account</span>
-        <img class="shape-1" src="/images/marquee-shape-1.svg" />
-        <span class="win">Collect them all</span>
-        <span class="prize">Nintendo Switch</span>
-        <span class="win">Win</span>
-        <img class="shape-2" src="/images/marquee-shape-2.svg" />
-        <span class="prize">Pro Account</span>
-        <img class="shape-2" src="/images/marquee-shape-2.svg" />
-        <span class="win">Win</span>
-        <span class="win">Collect them all</span>
-      </div>
-    </div>
-  </div>
-
   <div class="masthead">
     <div class="conf-subhead">
       <img class="conf-mark" src="/images/fitc-mark.svg" />
@@ -41,9 +7,18 @@
     </div>
     <h1>Netlify Collect</h1>
     <p>
-      Deploy your site to earn a few Netlify pro account for six months.
+      Deploy your site to earn to start collecting primitives.
       <br />
-      Collect all the platform primitives for a chance to win a Nintendo Switch.
+      Collect at least six Netlify platform primitives for a chance to win
+      <br />
+      🎧
+      <a
+        href="https://electronics.sony.com/audio/headphones/headband/p/wh1000xm5-b"
+        target="_blank"
+      >
+        Sony WH-1000XM5 headphones
+      </a>
+      🎧
     </p>
   </div>
 </header>
